# now

./: .gitignore  .now.json  CHANGELOG.md  Cargo.toml  DESIGN.md  Makefile  PRODUCT.md  README.md  install.ps1  install.sh  package.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  npm-publish.yml  pages.yml  release.yml
docs/: PRD.md
npm/: cli.cjs  postinstall.cjs  prepublish-check.cjs
public/: app.js  index.html  styles.css
src/: azure_blob.rs  cli.rs  config.rs  deploy.rs  env_file.rs  fs_rules.rs  lib.rs  main.rs  onboarding.rs  provider.rs
tests/: cli.rs  postinstall.test.cjs
