[package]
name = "now"
version = "0.1.2"
edition = "2024"
description = "Deploy static sites with provider CLIs"
license = "MIT"
repository = "https://github.com/doggy8088/now"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
url = "2"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
